coturn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  namespace: synapse
spec:
  selector:
    matchLabels:
      app: coturn
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: coturn
    spec:
      hostNetwork: true
      containers:
        - image: dexxter1911/dynamic-coturn:latest
          name: turn
          volumeMounts:
          - name: cert
            mountPath: /var/run/secret
            readOnly: true
          - name: conf
            mountPath: /etc/coturn.conf
            subPath: coturn.conf
      volumes:
      #In my case this is a wildcard certificate which automatically includes turn.example.com
      - name: cert
        secret:
          secretName: turn.example.org
      - name: conf
        configMap:
          name: coturn-conf
          items:
          - key: coturn.conf
            path: coturn.conf
