coturn/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: coturn-statefulset
  namespace: synapse
  labels:
    app: coturn
spec:
  serviceName: "coturn"
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      containers:
      - name: coturn
        image: dexxter1911/dynamic-coturn:latest
        volumeMounts:
        - name: cert
          mountPath: /var/run/secret
          readOnly: true
        - name: conf
          mountPath: /etc/coturn.conf
          subPath: coturn.conf
      volumes:
      #In my case this is a wildcard certificate which automatically includes turn.example.com
      - name: cert
        secret:
          secretName: turn.example.org
      - name: conf
        configMap:
          name: coturn-conf
          items:
          - key: coturn.conf
            path: coturn.conf
