coturn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coturn-service
  namespace: synapse
  labels:
    app: coturn
spec:
  clusterIP: None
  selector:
    app: coturn
  # clusterIP: None
  ports:
  - name: tcp
    port: 5349
    targetPort: 5349
    protocol: TCP
  - name: udp
    port: 5349
    targetPort: 5349
    protocol: UDP
  - name: udp-range-49160
    port: 49160
    targetPort: 49160
    protocol: UDP
  - name: udp-range-49161
    port: 49161
    targetPort: 49161
    protocol: UDP
  type: ClusterIP
