coturn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coturn-ingress
  namespace: synapse
spec:
  ingressClassName: nginx
  rules:
  - host: turn.example.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: coturn-service
            port:
              number: 5349
  tls:
  - hosts:
    - turn.example.org
